src/test/deca/context/invalid/ContextSansObjet/OperationsUnaires/Not_String.deca
//Description:
//  Vérification contextuelle du type de sortie l'opérateur ! sur un type float. Si le résultat générait un string il serait affichable.
//
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type non affichable (les types qu'on peut afficher sont int,float et string)
{
   println(!true);
}